Fixup: Vertically centre align services section

--- a/src/css/services.css
+++ b/src/css/services.css
@@ -15,7 +15,7 @@
 }
 .container {
   max-width: 1200px;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 /*====== cards style ==========*/
